# AROTC-AIS

AROTCAIS/: cfo_20230605.sql  db.sqlite3  manage.py  populate_cfo_tables.sql  pyproject.toml
AROTCAIS-VENV/: pyvenv.cfg
AROTCAIS-VENV/Scripts/: activate  activate.bat
AROTCAIS/AROTCAIS/: asgi.py  settings.py  urls.py  wsgi.py
AROTCAIS/CFO/: admin.py  models.py  urls.py  views.py
AROTCAIS/CFO/migrations/: 0001_initial.py  0002_alter_coa_superid.py  0003_alter_coa_superid.py  0004_coa_concatenated_id.py  0005_alter_coa_subid_alter_coa_concatenated_id.py  0006_journalentry.py  0007_journalentry_dateinputted_journalentry_daterealized_and_more.py  0008_remove_journalentry_creditedaccount_and_more.py  0009_alter_coa_accountdescription_and_more.py  0010_creditedaccount_debitedaccount_delete_transaction.py  0011_creditedaccount_coa_id_debitedaccount_coa_id.py  0012_remove_creditedaccount_journalid_and_more.py  0013_alter_creditedaccount_coa_id_and_more.py  0014_remove_creditedaccount_coa_id_and_more.py  0015_creditedaccount_coa_id_debitedaccount_coa_id.py  0016_alter_creditedaccount_coa_id_and_more.py
AROTCAIS/CFO/static/js/: JEscript
AROTCAIS/CFO/templates/CFO/: ChartOfAccounts.html  Dashboard.html  EditAccount.html  Index.html  IndexAuth.html  JournalEntry.html  Signin.html  Signup.html  index.html  login.html  messages.html  register.html
accounting-app/: db.sqlite3
